--- a/Article_Search/app3_pt2_pgloader.ipynb
+++ b/Article_Search/app3_pt2_pgloader.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 12
     }
    ],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 15
     }
    ],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,13 +123,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "Posting\n",
+      "Moving to next term\n",
+      "Posting\n",
+      "Moving to next term\n",
+      "Posting\n",
+      "Moving to next term\n",
+      "Posting\n",
+      "Moving to next term\n",
+      "Posting\n",
+      "Moving to next term\n",
+      "Posting\n",
+      "Moving to next term\n",
+      "Posting\n",
+      "Moving to next term\n",
+      "Posting\n",
+      "Moving to next term\n",
+      "Posting\n",
+      "Moving to next term\n",
+      "Posting\n",
+      "Moving to next term\n",
+      "Posting\n",
+      "Moving to next term\n",
+      "Posting\n",
+      "Moving to next term\n",
+      "Posting\n",
+      "Moving to next term\n",
+      "Posting\n",
+      "Moving to next term\n",
+      "Posting\n",
+      "Moving to next term\n",
       "Posting\n",
       "Moving to next term\n",
       "Posting\n",
